(executable
 (name server)
 (modules server)
 (libraries rtmp))

(executable
 (name client)
 (modules client)
 (libraries rtmp))

(executable
 (name readflv)
 (modules readflv)
 (libraries rtmp))

(test
 (name test)
 (modules test)
 (libraries rtmp))

(rule
 (alias runtest)
 (action
  (run ./test.exe)))
